# plusml-data-visualization

./: .gitignore  LICENSE  MANIFEST.in  NATURE_FIGURE_OPTIMIZATION_PLAN.md  Readme.md  ScatterChartStrategy.py  potter.py  pyproject.toml  requirements.txt  setup.py  模型体系详解.md
config/: __init__.py  api.py  constants.py  defaults.py
config/colors/: __init__.py  presets.py  registry.py
config/factories/: __init__.py  aspect_ratio_factory.py  font_size_factory.py
config/models/: __init__.py  aspect_ratio_policy.py  color_palette.py  font_size_policy.py  layout_mode.py  plot_config.py
config/presets/: __init__.py  default_presets.py
config/services/: __init__.py  figure_service.py  font_service.py
config/strategies/: __init__.py  base.py  direct.py  fixed_width.py  registry.py
config/strategies/aspect_ratio/: __init__.py  four_to_three.py  golden_ratio.py  sixteen_to_nine.py  square.py
config/strategies/font_size/: __init__.py  direct.py  fixed_width.py
draw/: API_REFERENCE.md  __init__.py  draw_interface.py  font_utils.py  plotter.py  simple.py
draw/strategies/: GRAPH_VIZ_README.md  IMPLEMENTATION_SUMMARY.md  README_QUICKSTART.md  __init__.py  base.py  encodings.py  graph_viz.py  graph_viz_demo.py  grid.py  layout_helpers.py  line.py  quickstart_examples.py  registry.py
examples/: heatmap_example.py
plot/: __init__.py  core.py
plot/strategies/: __init__.py  bar.py  base.py  heatmap.py  line.py  registry.py  scatter.py
tests/: test_interfaces.py
