[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plusml-data-visualization"
version = "0.1.0"
description = "A standardized plotting framework for scientific research with consistent font, size, and output specifications"
readme = "Readme.md"
license = {text = "MIT"}
authors = [
    {name = "PlusML Team", email = "contact@plusml.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib",
    "ogb>=1.3.6"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/plusml/plusml-data-visualization"
Repository = "https://github.com/plusml/plusml-data-visualization"
Issues = "https://github.com/plusml/plusml-data-visualization/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]
